# CHAI

./: claude-progress.txt  feature_list.json  init.sh  project_spec.md  pyproject.toml  run_agent.sh  run_loop.sh  smoke_test.py
chai/: __init__.py  cli.py
frontend/: index.html  package-lock.json  package.json
server/: main.py  models.py
tests/: __init__.py  test_action_plot_engine.py  test_antagonist_engine.py  test_chapter_body_engine.py  test_chapter_content_engine.py  test_chapter_self_check_engine.py  test_chapter_synopsis_engine.py  test_chapter_transition_engine.py  test_chapter_word_count_engine.py  test_character_growth_arc_engine.py  test_character_relationship_network_engine.py  test_character_system_engine.py  test_climax_ending_engine.py  test_complete_outline_engine.py  test_deconstruct.py  test_description_density_engine.py  test_dialogue_engine.py  test_dialogue_naturalness_engine.py  test_dialogue_tag_check_engine.py  test_engines.py  test_epub_manuscript_engine.py  test_export.py  test_final_export_engine.py  test_foreshadowing_check_engine.py  test_full_book_polishing_engine.py  test_grammar_check_engine.py  test_incremental_writing_engine.py  test_magic_system_engine.py  test_main_character_engine.py  test_main_story_structure_engine.py  test_markdown_manuscript_engine.py  test_models.py  test_novel_genre_engine.py  test_outline_import_engine.py  test_payoff_completeness_engine.py  test_pdf_manuscript_engine.py  test_plot_logic_engine.py  test_project_init_engine.py  test_punctuation_check_engine.py  test_scene_description_engine.py  (+13 more)
(+181 files in other folders)
