[project]
name = "chai-novel"
version = "0.1.0"
description = "CHAI - AI 小说自动化写作系统"
authors = [{name = "CHAI Team"}]
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.18.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
